Jeu_de_tests/error/no_main.tpc
/* pas de main */

int a;

int function(void){
    return 256*2;
}
